--- a/index.html
+++ b/index.html
@@ -196,6 +196,6 @@ a{
   </a>
   </div>
   
-  <script type="module" src="script.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
 </html>
